--- a/colourgame.html
+++ b/colourgame.html
@@ -1,1 +1,22 @@
 <!Doctype html>
+<html>
+
+    <head><title>Colour Game</title>
+        <link rel="stylesheet" type="text/css" href="colourgame.css">
+    </head>
+    
+    <body>
+        <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
+    <div id="squareContainer">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>    
+    </div>
+        
+    <script type="text/javascript" src="colourgame.js"></script>
+    </body>
+
+</html>
