Added Click event handlers, win condition logic

--- a/colourgame.html
+++ b/colourgame.html
@@ -7,6 +7,8 @@
     
     <body>
         <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
+        <div>
+            <span id = "message"></span></div>
     <div id="squareContainer">
     <div class="square"></div>
     <div class="square"></div>
