--- a/colourgame.html
+++ b/colourgame.html
@@ -7,8 +7,10 @@
     
     <body>
         <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
-        <div>
-            <span id = "message"></span></div>
+        <div id = "stripe">
+            <button id="reset">New Colours</button>
+            <span id = "message"></span>
+        </div>
     <div id="squareContainer">
     <div class="square"></div>
     <div class="square"></div>
