--- a/colourgame.html
+++ b/colourgame.html
@@ -9,6 +9,8 @@
         <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
         <div id = "stripe">
             <button id="reset">New Colours</button>
+            <button id = "easy">Easy</button>
+            <button id = "hard" class = "selected">Hard</button>
             <span id = "message"></span>
         </div>
     <div id="squareContainer">
