Added styling, minor tweaks and slight refactoring still pending

--- a/colourgame.html
+++ b/colourgame.html
@@ -3,6 +3,7 @@
 
     <head><title>Colour Game</title>
         <link rel="stylesheet" type="text/css" href="colourgame.css">
+        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     </head>
     
     <body>
