--- a/colourgame.html
+++ b/colourgame.html
@@ -10,8 +10,8 @@
         <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
         <div id = "stripe">
             <button id="reset">New Colours</button>
-            <button id = "easy">Easy</button>
-            <button id = "hard" class = "selected">Hard</button>
+            <button class = "mode">Easy</button>
+            <button class = "mode selected">Hard</button>
             <span id = "message"></span>
         </div>
     <div id="squareContainer">
@@ -20,7 +20,7 @@
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
-    <div class="square"></div>    
+    <div class="square"></div>      
     </div>
         
     <script type="text/javascript" src="colourgame.js"></script>
