--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     
     <body>
-        <h1>The Great <span id="pickedCol">RGB</span> Colour Game</h1>
+        <h1>The <span id="pickedCol">RGB</span> Colour Guessing Game</h1>
+        <h2>By Nkululeko Kubeka</h2>
         <div id = "stripe">
             <button id="reset">New Colours</button>
             <button class = "mode">Easy</button>
