--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     </head>
     
     <body>
-        <h1>But seriously what was in that deleted whatsapp message tho?</h1>
+        <h1>What</h1>
+        <h1>was</h1>
+        <h1>in that</h1>
+        <h1> deleted</h1>
+        <h1> whatsapp message?</h1>
+
+        <span> P.S. Curiosity made me build a whole damn website </span>
     </body>
 
 </html>
