--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1> deleted</h1>
         <h1> whatsapp message?</h1>
 
-        <h2> P.S. Curiosity made me build a whole damn website lol </h2>
+        <span> P.S. Curiosity made me build a whole damn website </span>
     </body>
 
 </html>
